# hatch-pyz

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/actions/: release.yml
.github/workflows/: lint.yml
src/hatch_pyz/: builder.py  config.py  hooks.py  plugin.py
tests/: conftest.py  test_builder.py  test_hatch.py  test_hooks.py  test_pyz.py
